# avcodec_wrapper

./: .gitignore  CMakeLists.txt  README.md  example.cpp
src/: videoDecoder.cpp  videoDecoder.h  videoEncoder.cpp  videoEncoder.h
